--- a/loadbalancer.yml
+++ b/loadbalancer.yml
@@ -5,3 +5,6 @@
   # Needed to install epel-release first
   - name: install nginx
     yum: name=nginx state=present update_cache=yes
+
+  - name: ensure nginx started
+    service: name=nginx state=started enabled=yes
