finished video 17 mod_wsgi enabling

--- a/webservers.yml
+++ b/webservers.yml
@@ -13,3 +13,11 @@
 
   - name: ensure Apache started
     service: name=httpd state=started enabled=yes
+
+  - name: Ensure mod_wsgi is enabled
+    apache2_module: state=present name=wsgi
+    notify: restart httpd
+
+  handlers:
+  - name: restart httpd
+    service: name=httpd state=restarted
