--- a/loadbalancer.yml
+++ b/loadbalancer.yml
@@ -8,3 +8,30 @@
 
   - name: ensure nginx started
     service: name=nginx state=started enabled=yes
+
+  - name: add app01 to hosts file for dns recognition
+    lineinfile: dest=/etc/hosts line='172.19.85.39 app01'
+
+  - name: add app02 to hosts file for dns recognition
+    lineinfile: dest=/etc/hosts line='172.19.85.40 app02'
+
+  - name: deactivate default nginx site
+    file: path=/usr/share/nginx/html/index.html state=absent
+    notify: restart nginx
+
+  - name: deactivate default nginx site
+    file: path=/etc/nginx/nginx.conf state=absent
+    notify: restart nginx
+
+  - name: copy nginx main config
+    copy: src=/var/ansible/demo/nginx.conf dest=/etc/nginx/ mode=0644
+    notify: restart nginx
+
+
+  - name: configure nignx site
+    template: src=/var/ansible/host_vars/nginx.conf.j2 dest=/etc/nginx/conf.d/demo.conf mode=0644
+    notify: restart nginx
+
+  handlers:
+  - name: restart nginx
+    service: name=nginx state=restarted
