--- a/loadbalancer.yml
+++ b/loadbalancer.yml
@@ -2,21 +2,22 @@
 - hosts: loadbalancer
   become: true
   tasks:
+  - name: Add servers to /etc/hosts for local dns
+    blockinfile:
+      dest: /etc/hosts
+      block: |
+        172.19.85.6  contorl
+        172.19.85.38 lb01
+        172.19.85.39 app01
+        172.19.85.40 app02
+        172.19.85.41 db01
+
   # Needed to install epel-release first
   - name: install nginx
     yum: name=nginx state=present update_cache=yes
 
   - name: ensure nginx started
     service: name=nginx state=started enabled=yes
-
-  - name: add app01 to hosts file for dns recognition
-    lineinfile: dest=/etc/hosts line='172.19.85.39 app01'
-
-  - name: add app02 to hosts file for dns recognition
-    lineinfile: dest=/etc/hosts line='172.19.85.40 app02'
-
-  - name: add db01 to hosts file for dns recognition
-    lineinfile: dest=/etc/hosts line='172.19.85.41 db01'
 
   - name: deactivate default nginx site
     file: path=/usr/share/nginx/html/index.html state=absent
