--- a/webservers.yml
+++ b/webservers.yml
@@ -2,12 +2,15 @@
 - hosts: webserver
   become: true
   tasks:
-
-  - name: add db01 to hosts file for dns recognition
-    lineinfile: dest=/etc/hosts line='172.19.85.41 db01'
-
-  - name: add lb01 to hosts file for dns recognition
-    lineinfile: dest=/etc/hosts line='172.19.85.38 lb01'
+  - name: Add servers to /etc/hosts for local dns
+    blockinfile:
+      dest: /etc/hosts
+      block: |
+        172.19.85.6  contorl
+        172.19.85.38 lb01
+        172.19.85.39 app01
+        172.19.85.40 app02
+        172.19.85.41 db01
 
   # needed to install epel-release first.
   - name: Install web components
