--- a/stack-restart.yml
+++ b/stack-restart.yml
@@ -3,26 +3,36 @@
 - hosts: loadbalncer
   become: true
   tasks:
-  - service: name=nginx state=stopped
+  - name: stopping loadbalncers
+    service: name=nginx state=stopped
+    wait_for: port=80 state=drained
 
 - hosts: webserver
   become: true
   tasks:
-  - service: name=httpd state=stopped
+  - name: stopping webservers
+    service: name=httpd state=stopped
+    wait_for: port=80 state=stopped
 
 # Restart mysql
 - hosts: database
   become: true
   tasks:
-  - service: name=mariadb state=restarted
+  - name: restarting databases
+    service: name=mariadb state=restarted
+    wait_for: port=3306 state=started
 
 # Bring stack back up
 - hosts: webserver
   become: true
   tasks:
-  - service: name=httpd state=started
+  - name: starting webservers
+    service: name=httpd state=started
+    wait_for: port=80 state=statrted
 
 - hosts: loadbalncer
   become: true
   tasks:
-  - service: name=nginx state=started
+  - name: starting loadbalancer
+   service: name=nginx state=started
+   wait_for: port=80 state=started
