--- a/loadbalancer.yml
+++ b/loadbalancer.yml
@@ -13,8 +13,11 @@
         172.19.85.41 db01
 
   # Needed to install epel-release first
-  - name: install nginx
-    yum: name=nginx state=present update_cache=yes
+  - name: install nginx and tools
+    yum: name={{item}} state=present update_cache=yes
+    with_items:
+    - nginx
+    - python-httplib2
 
   - name: ensure nginx started
     service: name=nginx state=started enabled=yes
