--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -1,2 +1,33 @@
 ---
 # tasks file for mariadb
+  # In Centos 7 mysql is no longer defaultly available you must use mariadb
+  - name: Install Pre reqs and mariadb
+    yum: name={{item}} state=present update_cache=yes
+    with_items:
+    - MySQL-python
+    - mariadb-server
+
+  - name: Add servers to /etc/hosts for local dns
+    blockinfile:
+      dest: /etc/hosts
+      block: |
+        172.19.85.6  contorl
+        172.19.85.38 lb01
+        172.19.85.39 app01
+        172.19.85.40 app02
+        172.19.85.41 db01
+
+  - name: ensure Mariadb started
+    service: name=mariadb state=started enabled=yes
+
+  - name: create demo database.
+    mysql_db: name=demo state=present
+
+  - name: create demo user remote
+    mysql_user: name=demo password=demo priv=demo.*:ALL host='%' state=present
+
+  - name: create demo user local
+    mysql_user: name=demo password=demo priv=demo.*:ALL,grant host='localhost' state=present
+
+  - name: create demo user local ip
+    mysql_user: name=demo password=demo priv=demo.*:ALL,grant host='127.0.0.1' state=present
