finished conversion to roles

--- a/playbooks/loadbalancer.yml
+++ b/playbooks/loadbalancer.yml
@@ -1,44 +1,5 @@
 ---
 - hosts: loadbalancer
   become: true
-  tasks:
-  - name: Add servers to /etc/hosts for local dns
-    blockinfile:
-      dest: /etc/hosts
-      block: |
-        172.19.85.6  contorl
-        172.19.85.38 lb01
-        172.19.85.39 app01
-        172.19.85.40 app02
-        172.19.85.41 db01
-
-  # Needed to install epel-release first
-  - name: install nginx and tools
-    yum: name={{item}} state=present update_cache=yes
-    with_items:
-    - nginx
-    - python-httplib2
-
-  - name: ensure nginx started
-    service: name=nginx state=started enabled=yes
-
-  - name: deactivate default nginx site
-    file: path=/usr/share/nginx/html/index.html state=absent
-    notify: restart nginx
-
-  - name: deactivate default nginx site
-    file: path=/etc/nginx/nginx.conf state=absent
-    notify: restart nginx
-
-  - name: copy nginx main config
-    copy: src=/var/ansible/demo/nginx.conf dest=/etc/nginx/ mode=0644
-    notify: restart nginx
-
-
-  - name: configure nignx site
-    template: src=/var/ansible/host_vars/nginx.conf.j2 dest=/etc/nginx/conf.d/demo.conf mode=0644
-    notify: restart nginx
-
-  handlers:
-  - name: restart nginx
-    service: name=nginx state=restarted
+  roles:
+  - nginx
