--- a/playbooks/webservers.yml
+++ b/playbooks/webservers.yml
@@ -1,62 +1,6 @@
 ---
 - hosts: webserver
   become: true
-  tasks:
-  - name: Add servers to /etc/hosts for local dns
-    blockinfile:
-      dest: /etc/hosts
-      block: |
-        172.19.85.6  contorl
-        172.19.85.38 lb01
-        172.19.85.39 app01
-        172.19.85.40 app02
-        172.19.85.41 db01
-
-  # needed to install epel-release first.
-  - name: Install web components
-    yum: name={{item}} state=present update_cache=yes
-    with_items:
-    - httpd
-    - mod_wsgi
-    - python2-pip
-    - python-virtualenv
-    - MySQL-python
-
-  - name: ensure Apache started
-    service: name=httpd state=started enabled=yes
-
-  - name: Ensure mod_wsgi is enabled
-    apache2_module: state=present name=wsgi
-    notify: restart httpd
-
-  - name: copy demo app source
-    copy: src=/var/ansible/demo/app/ dest=/var/www/demo mode=0755
-    notify: restart httpd
-
-  - name: Make sites-enabled recognized in apache conf
-    lineinfile: dest=/etc/httpd/conf/httpd.conf line='IncludeOptional sites-enabled/*.conf'
-    notify: restart httpd
-
-  - name: copy Apache virtual host config
-    copy: src=/var/ansible/demo/demo.conf dest=/etc/httpd/sites-available/ mode=0755
-    notify: restart httpd
-
-  - name: setup python virtual environment
-    pip: requirements=/var/www/demo/requirements.txt virtualenv=/var/www/demo/.venv
-    notify: restart httpd
-
-  - name: ensure sites enabled dir exists
-    file: path=/etc/httpd/sites-enabled/ state=directory
-    notify: restart httpd
-
-  - name: deactivate default apache site
-    file: path=/etc/httpd/conf.d/welcome.conf state=absent
-    notify: restart httpd
-
-  - name: activate demo apache site
-    file: src=/etc/httpd/sites-available/demo.conf dest=/etc/httpd/sites-enabled/demo.conf state=link
-    notify: restart httpd
-
-  handlers:
-  - name: restart httpd
-    service: name=httpd state=restarted
+  roles:
+  - apache
+  - demo_app
