--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -1,2 +1,38 @@
 ---
 # tasks file for apache
+ # needed to install epel-release first.
+  - name: Add servers to /etc/hosts for local dns
+    blockinfile:
+      dest: /etc/hosts
+      block: |
+        172.19.85.6  contorl
+        172.19.85.38 lb01
+        172.19.85.39 app01
+        172.19.85.40 app02
+        172.19.85.41 db01
+
+  - name: Install web components
+    yum: name={{item}} state=present update_cache=yes
+    with_items:
+    - httpd
+    - mod_wsgi
+
+  - name: Ensure mod_wsgi is enabled
+    apache2_module: state=present name=wsgi
+    notify: restart httpd
+
+  - name: ensure sites enabled dir exists
+    file: path=/etc/httpd/sites-enabled/ state=directory
+    notify: restart httpd
+
+  - name: Make sites-enabled recognized in apache conf
+    lineinfile: dest=/etc/httpd/conf/httpd.conf line='IncludeOptional sites-enabled/*.conf'
+    notify: restart httpd
+
+  - name: deactivate default apache site
+    file: path=/etc/httpd/conf.d/welcome.conf state=absent
+    notify: restart httpd
+
+ - name: ensure Apache started
+    service: name=httpd state=started enabled=yes
+
