--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -18,20 +18,16 @@
         172.19.85.41 db01
 
   - name: ensure mysql listening on all ports
-    lineinfile: dest=/etc/my.cnf.d/server.cnf regexp=^bind-address line="bind-address={{ansible_default_ipv4.address}}"
+    lineinfile: dest=/etc/my.cnf.d/server.cnf regexp=^bind-address
+                line="bind-address={{ansible_default_ipv4.address}}"
     notify: restart mariadb
 
   - name: ensure Mariadb started
     service: name=mariadb state=started enabled=yes
 
   - name: create demo database.
-    mysql_db: name=demo state=present
+    mysql_db: name={{db_name}} state=present
 
-  - name: create demo user remote
-    mysql_user: name=demo password=demo priv=demo.*:ALL host='%' state=present
-
-  - name: create demo user local
-    mysql_user: name=demo password=demo priv=demo.*:ALL,grant host='localhost' state=present
-
-  - name: create demo user local ip
-    mysql_user: name=demo password=demo priv=demo.*:ALL,grant host='127.0.0.1' state=present
+  - name: create dbuser user remote
+    mysql_user: name={{db_user_name}} password={{db_user_pass}}
+                priv={{db_name}}.*:ALL host='{{db_user_host}}' state=present
