modified structure added default vars to db role

--- a/playbooks/dbservers.yml
+++ b/playbooks/dbservers.yml
@@ -2,5 +2,4 @@
 - hosts: database
   become: true
   roles:
-  - mariadb
-
+  - {role: mariadb, db_name: demo, db_user_name: demo, db_user_pass: demo, db_user_host: '%'}
