--- a/roles/demo_app/tasks/main.yml
+++ b/roles/demo_app/tasks/main.yml
@@ -11,6 +11,10 @@
     copy: src=files/demo/app/ dest=/var/www/demo mode=0755
     notify: restart httpd
 
+  - name: copy demo.wsgi
+    template: src=demo.wsgi.j2 dest=/var/www/demo/demo.wsgi mode=0755
+    notify: restart httpd
+
   - name: copy Apache virtual host config
     copy: src=files/demo/demo.conf dest=/etc/httpd/sites-available/ mode=0755
     notify: restart httpd
