--- a/playbooks/dbservers.yml
+++ b/playbooks/dbservers.yml
@@ -2,4 +2,7 @@
 - hosts: database
   become: true
   roles:
-  - {role: mariadb, db_name: demo, db_user_name: demo, db_user_pass: demo, db_user_host: '%'}
+  - role: mariadb
+    db_user_name: "{{ db_user }}"
+    db_user_pass: "{{ db_pass }}"
+    db_user_host: '%'
