--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -16,6 +16,7 @@
     with_items:
     - nginx
     - python-httplib2
+    tags: [ 'packages' ]
 
   - name: deactivate default nginx site
     file: path=/usr/share/nginx/html/index.html state=absent
@@ -32,6 +33,7 @@
   - name: get active sites
     shell: ls -l /etc/nginx/conf.d
     register: active
+    changed_when: "active.stdout_lines != sites.keys()"
 
   - name: de-activate sites
     file: path=/etc/nginx/conf.d/{{ item }} state=absent
