--- a/site.yml
+++ b/site.yml
@@ -5,6 +5,7 @@
   tasks:
     - name: update cache
       yum: update_cache=yes cache_valid_time=86400
+      tags: [ 'packages' ]
 
 - include: playbooks/control.yml
 - include: playbooks/dbservers.yml
